# bekind

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  telegram_autoblur.py
src/: __init__.py  app.py  cli.py  config.py  loader.py  matcher.py
src/data/: rules.toml
src/telegram_autoblur/: __init__.py  __main__.py  app.py  cli.py  config.py  loader.py  matcher.py
src/telegram_autoblur/data/: manual_words.txt  patterns.txt  roots.txt  rules.toml  safe_words.txt
tests/: test_app.py  test_matcher.py
